# Shelfie

./: .gitattributes  .gitignore  Dockerfile  README.md  database.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt  scanner.py
.github/workflows/: ci.yml
docs/: development.md
src/shelfie/: __init__.py  config.py  database.py  main.py  scanner.py  version_check.py
src/shelfie/templates/: index.html
template/: index.html
tests/: conftest.py  test_api.py  test_scanner.py  test_version_check.py
